# Cluedo_Game

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  Dockerfile.testing  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  logger.conf  play_cluedo.py  play_human.py  play_with_ai.py  pyproject.toml  pytest.ini  requirements.txt  run_movement_tests.sh  run_nash_test.py  setup.py  tests_dir_listing.txt
.github/workflows/: ci.yml  python-app.yml
cluedo_game/: __init__.py  accusation.py  ai_player.py  cards.py  character.py  cluedo_game.py  game.py  game_with_ai.py  history.py  main.py  mansion.py  movement.py  nash_ai_player.py  player.py  solution.py  suggestion.py  weapon.py
cluedo_game/ai/: __init__.py  bayesian_model.py  learning.py  movement_strategy.py  nash_ai_player.py  suggestion_engine.py  utils.py
cluedo_game/game/: __init__.py  actions.py  ai_controller.py  core.py  game_loop.py  initialization.py  player_management.py  ui.py  win_conditions.py
tests/: conftest.py  test_ai_player.py  test_board_and_movement.py  test_cards_components.py  test_character.py  test_chess_coordinates.py  test_cluedo_game.py  test_cluedo_game_accusation.py  test_cluedo_game_combined.py  test_cluedo_game_integration.py  test_game_mechanics.py  test_game_with_ai.py  test_history.py  test_mansion.py  test_minimal.py  test_nash_ai_combined.py  test_play_cluedo.py  test_player.py  test_safe_nash.py  test_solution.py  test_suggestion.py  test_weapon.py
